feat: add section gallery and ticket

--- a/museum/index.html
+++ b/museum/index.html
@@ -170,23 +170,72 @@
                             <img src="./assets/svg/three-dots.svg" class="three-dots" alt="">
                         </div>
                         <img src="./assets/img/video3.jpg" class="video-image3" alt="">
-                        <button class="youtube-icon arrow-left"></button>
+                        <button class="youtube-icon"></button>
                     </div>
+                </div>
+                <div>
+                    <img src="./assets/svg/video-slider.svg" class="slider" alt="">
                 </div>
             </div>
         </section>
 
 
+        <section class="gallery" id="gallery">
+            <div class="container gallery-container">
+                <h2 class="section-title section-title-dark">Art Gallery</h2>
+                <div class="gallery-block">
+                    <div class="gallery-box gallery-padding">
+                        <img src="./assets/img/galery1.jpg" alt="">
+                        <img src="./assets/img/galery4.jpg" alt="">
+                        <img src="./assets/img/galery7.jpg" alt="">
+                        <img src="./assets/img/galery10.jpg" class="a" alt="">
+                    </div>
+                    <div class="gallery-box">
+                        <img src="./assets/img/galery2.jpg" alt="">
+                        <img src="./assets/img/galery5.jpg" alt="">
+                        <img src="./assets/img/galery8.jpg" alt="">
+                        <img src="./assets/img/galery11.jpg" class="a" alt="">
+                    </div>
+                    <div class="gallery-box gallery-padding">
+                        <img src="./assets/img/galery3.jpg" alt="">
+                        <img src="./assets/img/galery6.jpg" alt="">
+                        <img src="./assets/img/galery9.jpg" alt="">
+                        <img src="./assets/img/galery12.jpg" class="a" alt="">
+                    </div>
+                </div>
+        </section>
 
-        <section class="section">
-            <div class="container"></div>
-        </section>
-        <section class="section">
-            <div class="container"></div>
-        </section>
-        <section class="section">
-            <div class="container"></div>
-        </section>
+
+        <section class="tickets" id="tickets">
+            <div class="container tickets-container">
+                <h2 class="section-title section-title-gold underline-title">Buy tickets</h2>
+                <div class="tickets-block">
+                    <img src="./assets/img/tickets1.jpg" alt="">
+                    <div class="ticket-type">
+                        <h3 class="tickets-title">Ticket Type</h3>
+                        <form>
+                            <label><input type="radio" name="exhibition" value="rad1" checked>
+                                <p class="tickets-text"> Permanent exhibition</p>
+                            </label><br>
+                            <label><input type="radio" name="exhibition" value="rad2">
+                                <p class="tickets-text"> Temporary
+                                    exhibition</p>
+                            </label><br>
+                            <label><input type="radio" name="exhibition" value="rad3">
+                                <p class="tickets-text"> Combined Admission</p>
+                            </label>
+                        </form>
+                    </div>
+                    <div>
+                        <h3 class="tickets-title">Amount</h3>
+                        <p class="tickets-text">Basic 18+</p>
+                        <p class="tickets-text">Senior 65+</p>
+                        <p class="tickets-title">Total €<span>220</span></p>
+                        <button class="tickets-button">
+                            <p class="tickets-text-button">Buy Now</p>
+                        </button>
+                    </div>
+                </div>
 
     </main>
     <footer class="footer">
