feat: add contacts and footer

--- a/museum/index.html
+++ b/museum/index.html
@@ -252,9 +252,46 @@
             <img src="./assets/img/tickets2.jpg" class="tickets-photo" alt="">
         </section>
 
+
+        <section class="contacts" id="contacts">
+            <div class="container contacts-container">
+                <h2 class="section-title section-title-gold underline-title">Contacts</h2>
+                <div class="contacts-block">
+                    <div class="contacts-box">
+                        <h3 class="contacts-title">Palais Royal<br>Musee du Louvre</h3>
+                        <p class="contacts-text">address: 75001 Paris, France</p>
+                        <p class="contacts-text">phone: <a href="tel:+33(0) 1 40 20 50 50">+33(0) 1 40 20 50 50</a></p>
+                        <p class="contacts-text">mail: <a href="mailto:info@louvre.fr">info@louvre.fr</a></p>
+                    </div>
+                    <img src="./assets/img/map.jpg" class="contacts-image" alt="">
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer class="footer">
-        <div class="container"></div>
+        <div class="container footer-container">
+            <a href="">
+                <div class="logo">
+                    <div class="logo-image"></div>
+                    <p class="logo-text">Louvre</p>
+                </div>
+            </a>
+            <nav class="footer-nav">
+                <ul class="footer-ul">
+                    <div>
+                        <li><a href="#" class="footer-link">Visiting</a></li>
+                        <li><a href="#" class="footer-link">Explore</a></li>
+                        <li><a href="#" class="footer-link">Video</a></li>
+                    </div>
+                    <div>
+                        <li><a href="#" class="footer-link">Gallery</a></li>
+                        <li><a href="#" class="footer-link">Tickets</a></li>
+                        <li><a href="#" class="footer-link">Contacts</a></li>
+                    </div>
+                </ul>
+            </nav>
+        </div>
     </footer>
 </body>
 
