--- a/museum/index.html
+++ b/museum/index.html
@@ -271,26 +271,64 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <a href="">
-                <div class="logo">
+
+            <div class="footer-logo">
+                <a href="">
                     <div class="logo-image"></div>
+                </a>
+                <a href="">
                     <p class="logo-text">Louvre</p>
-                </div>
-            </a>
+                </a>
+            </div>
+
+
             <nav class="footer-nav">
                 <ul class="footer-ul">
                     <div>
-                        <li><a href="#" class="footer-link">Visiting</a></li>
-                        <li><a href="#" class="footer-link">Explore</a></li>
-                        <li><a href="#" class="footer-link">Video</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Visiting</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Explore</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Video</a></li>
                     </div>
                     <div>
-                        <li><a href="#" class="footer-link">Gallery</a></li>
-                        <li><a href="#" class="footer-link">Tickets</a></li>
-                        <li><a href="#" class="footer-link">Contacts</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Gallery</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Tickets</a></li>
+                        <li class="footer-li"><a href="#" class="footer-link">Contacts</a></li>
                     </div>
                 </ul>
             </nav>
+
+
+
+            <div class="footer-icon">
+                <ul class="footer-icon-ul">
+                    <a href="https://www.youtube.com/" target="_blank">
+                        <li class="ul-link icon icon-yt"></li>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <li class="ul-link icon icon-inst"></li>
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <li class="ul-link icon icon-fb"></li>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank">
+                        <li class="ul-link icon icon-tw"></li>
+                    </a>
+                    <a href="https://www.pinterest.com/" target="_blank">
+                        <li class="ul-link icon icon-pint"></li>
+                    </a>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="underline-title-footer"></div>
+
+        <div class="container footer-container-second">
+            <div class="footer-box">
+                <p class="footer-text">© 2021</p>
+                <p class="footer-text">The Rolling Scopes School</p>
+                <p class="footer-text">Username</p>
+            </div>
         </div>
     </footer>
 </body>
