--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
     <header class="container header-container">
         <div>
             <h1 class="logo-title">Cozy House</h1>
@@ -49,6 +48,7 @@
         <section class="container about-container" id="about">
             <div class="about-block">
                 <img src="../../assets/images/about-pets.jpg" class="about-image" alt="">
+
                 <div class="about-content">
                     <h2 class="about-title">About the shelter<br>“Cozy House”</h2>
                     <p class="about-text">Currently we have 121 dogs and 342 cats on our hands and statistics show that
@@ -65,29 +65,94 @@
                         animals,
                         they become attached to the pets and would hardly ever leave them alone.</p>
                 </div>
-
         </section>
 
+        <section class="container our-friends-container">
+            <div class="our-friends-block">
+                <h2 class="our-friends-title">Our friends who<br>are looking for a house</h2>
+                <div class="our-friends-catalog">
+                    <button class="previous"></button>
+                    <div class="card-box">
+                        <div class="card">
+                            <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
+                            <h4 class="card-name">Katrine</h4>
+                            <button class="card-button">Learn more</button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
+                            <h4 class="card-name">Jennifer</h4>
+                            <button class="card-button">Learn more</button>
+                        </div>
+                        <div class="card">
+                            <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
+                            <h4 class="card-name">Woody</h4>
+                            <button class="card-button">Learn more</button>
+                        </div>
+                    </div>
+                    <button class="next"></button>
+                </div>
+                <button class="our-friends-button">Get to know the rest</button>
+            </div>
+        </section>
 
-
-
-
-        <!-- <main class="main">
-        <section class="welcome" id="welcome">
-            <div class="container welcome-container">
-                <div class="welcome-content">
-                    <h1 class="section-title section-title-dark">Not only people<br>need a house</h1>
-                    <p class="welcome-text">
-                        We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He
-                        or she will love you more than anybody else in the world, you will see!
-                    </p>
-                    <button class="welcome-button">Make a friend</button>
+        <section class="container help-container">
+            <h2 class="help-title">How you can help<br>our shelter</h2>
+            <div class="grid">
+                <div>
+                    <div class="grid-icon1 icon"></div>
+                    <p class="grid-text">Pet food</p>
                 </div>
                 <div>
-                    <img src="../../assets/images/start-puppy.jpg" class="welcome-image" alt="">
+                    <div class="grid-icon2 icon"></div>
+                    <p class="grid-text">Transportation</p>
+                </div>
+                <div>
+                    <div class="grid-icon3 icon"></div>
+                    <p class="grid-text">Toys</p>
+                </div>
+                <div>
+                    <div class="grid-icon4 icon"></div>
+                    <p class="grid-text">Bowls and cups</p>
+                </div>
+                <div>
+                    <div class="grid-icon5 icon"></div>
+                    <p class="grid-text">Shampoos</p>
+                </div>
+                <div>
+                    <div class="grid-icon6 icon"></div>
+                    <p class="grid-text">Vitamins</p>
+                </div>
+                <div>
+                    <div class="grid-icon7 icon"></div>
+                    <p class="grid-text">Medicines</p>
+                </div>
+                <div>
+                    <div class="grid-icon8 icon"></div>
+                    <p class="grid-text">Collars / leashes</p>
+                </div>
+                <div>
+                    <div class="grid-icon9 icon"></div>
+                    <p class="grid-text">Sleeping areas</p>
                 </div>
             </div>
-        </section> -->
+        </section>
+
+        <section class="container in-addition-container">
+            <div class="in-addition-block">
+                <img src="../../assets/images/donation-dog.jpg" class="in-addition-image" alt="">
+                <div class="in-addition-content">
+                    <h2 class="in-addition-title">You can also<br>make a donation</h2>
+                    <p class="in-addition-text">Name of the bank / Type of bank account</p>
+                    <button class="credit-button credit-icon"><a href="8380 2880 8028 8791 7435">8380 2880 8028 8791
+                            7435</a></button>
+                    <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
+                        consectetur adipiscing
+                        elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
+                        tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
