feat: add footer

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -30,18 +30,18 @@
     </header>
 
     <main>
-        <section class="container welcome-container" id="welcome">
-            <div class="welcome-block">
-                <div class="welcome-content">
-                    <h1 class="welcome-title">Not only people<br>need a house</h1>
-                    <p class="welcome-text">
+        <section class="container not-only-container" id="not-only">
+            <div class="not-only-block">
+                <div class="not-only-content">
+                    <h1 class="not-only-title">Not only people<br>need a house</h1>
+                    <p class="not-only-text">
                         We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He
                         or she will love you more than anybody else in the world, you will see!
                     </p>
-                    <button class="welcome-button">Make a friend</button>
+                    <button class="not-only-button">Make a friend</button>
                 </div>
                 <!-- <div> -->
-                <img src="../../assets/images/start-puppy.jpg" class="welcome-image" alt="">
+                <img src="../../assets/images/start-puppy.jpg" class="not-only-image" alt="">
                 <!-- </div> -->
             </div>
         </section>
@@ -143,7 +143,8 @@
                 <div class="in-addition-content">
                     <h2 class="in-addition-title">You can also<br>make a donation</h2>
                     <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                    <button class="credit-button credit-icon"><a href="8380 2880 8028 8791 7435">8380 2880 8028 8791
+                    <button class="credit-button credit-icon"><a href="8380 2880 8028 8791 7435"
+                            class="credit-link">8380 2880 8028 8791
                             7435</a></button>
                     <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                         consectetur adipiscing
@@ -152,10 +153,37 @@
                 </div>
             </div>
         </section>
-
     </main>
 
-    <footer></footer>
+    <footer class="container footer-container">
+        <div class="footer-block">
+            <div class="contacts">
+                <h2 class="footer-title">For questions<br>and suggestions</h2>
+                <div class="link-box-contacts">
+                    <img src="../../assets/icons/icon-email.svg" alt="">
+                    <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
+                </div>
+                <div class="link-box-contacts">
+                    <img src="../../assets/icons/icon-phone.svg" alt="">
+                    <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
+                </div>
+            </div>
+            <div class="locations">
+                <h2 class="footer-title">We are waiting<br>for your visit</h2>
+                <div class="link-box-locations">
+                    <img src="../../assets/icons/icon-map.svg" alt="">
+                    <a href="" class="footer-link">1 Central Street, Boston<br>(entrance from the store)</a>
+                </div>
+                <div class="link-box-locations">
+                    <img src="../../assets/icons/icon-map.svg" alt="">
+                    <a href="" class="footer-link">18 South Park, London</a>
+                </div>
+            </div>
+            <div class="footer-image">
+                <img src="../../assets/images/footer-puppy.jpg" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
